# nrpys

./: Cargo.toml  README.md  nrpys.pyi  pyproject.toml
.github/workflows/: CI.yml
python/nrpys/: __init__.py
src/: config.rs  errors.rs  lib.rs
src/predictions/: adomain.rs  category.rs  mod.rs  prediction.rs
